# destiny

./: .gitignore  Makefile.am  configure.ac  destiny.c  destiny.h  digest.c  digest.h  filename.c  filename.h  find.c  find.h  log.c  log.h  main.c  manifest.c  manifest.h  md5.c  md5.h  package-lock.json  package.json
app/: .gitignore  dbsave.cfg
app/sql/: destiny.sql
app/tools/: loader.pl
cmd/: link.js  update.js
lib/: destiny.js  fsx.js  hasher.js  index.js  lazyprops.js  manifest.js  util.js
scripts/: destiny-conform  destiny-diff  destiny-link  destiny-merge
t/: .gitignore  Makefile.am  basic.c  filename.c  md5.c  md5gen.pl
tools/: build-static.sh  crono.pl
